<resources>
    <string name="app_name">HCDC Events</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Events</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>

    <string name="no_events_icon_description">No events calendar icon</string>
    <string name="no_upcoming_events_title">No Upcoming Events</string>
    <string name="no_upcoming_events_description">There are no incoming events at the moment. Check back soon for new events!</string>


    <!-- About Page -->
    <string name="about_this_application">About This Application</string>
    <string name="about_this_application_title">Important Disclaimer</string>
    <string name="about_this_application_message">This application, including all content and features, is a *school project* developed for academic purposes. It is *NOT* the official application of the campus or any affiliated organization. Data provided here is for testing purposes only and should not be relied upon for official information. Use of real institutional names is strictly for context and simulation."</string>

    <string name="about_this_application_overview_title">Application Overview</string>
    <string name="about_this_application_overview_message">This mobile application aims to streamline event registration, provide personalized news feeds, and facilitate communication for the student body. This project demonstrates real-time data handling using Firebase and modern Android development practices.</string>

    <string name="about_this_member_name_1">Angelo F. Econ</string>
    <string name="about_this_member_name_2">Luis Bryan Formentera</string>

    <string name="about_this_leader">Leader</string>
    <string name="about_this_member">Member</string>

    <string name="about_this_dev_team">Development Team</string>

    <string name="default_web_client_id">61144538443-kebns07iuadvtp54bf5jhtccphndo03l.apps.googleusercontent.com</string>
</resources>